[sc-7169] Replace classification by label sets
- Consistent naming for annotation (with labels or NER)
- Replace classification by label sets in all translations
- Remove unused translations

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -287,7 +287,6 @@
 	"feedback.subtitle": "Abans de marxar, si us plau, feu-nos saber el motiu pel qual deixeu Nuclia:",
 	"feedback.title": "Ens sap greu que te'n vagis!",
 	"filter.search_ontology": "Cerca l'Ontologia",
-	"filter.suggested_classification": "Classificació suggerida",
 	"generic.accept": "Acceptar",
 	"generic.actions": "Accions",
 	"generic.add": "Afegir",
@@ -399,7 +398,7 @@
 	"label-set.form.exclusive": "Etiqueta exclusiva",
 	"label-set.form.exclusive-checkbox": "Afegiu només una etiqueta per conjunt d'etiquetes",
 	"label-set.form.exclusive-description": "Per defecte, un recurs/bloc de text pot tenir diverses etiquetes d'un mateix conjunt d'etiquetes.",
-	"label-set.form.kind": "Tipus de classificació",
+	"label-set.form.kind": "Tipus de conjunt d'etiquetes",
 	"label-set.form.kind-warning": "Aquesta propietat no es pot modificar després.",
 	"label-set.form.labels.duplicated-name": "Nom de l'etiqueta duplicat",
 	"label-set.form.labels.naming-constraint": "No es permeten claudàtors",
@@ -508,13 +507,13 @@
 	"resource.classification.no-paragraph-labelset": "No hi ha cap etiqueta establerta per als blocs de text. Podeu afegir-ne alguns",
 	"resource.classification.no-resource-labelset": "No hi ha cap etiqueta establerta per als recursos. Podeu afegir-ne alguns",
 	"resource.classification.remove-label": "Elimina l'etiqueta de la selecció",
-	"resource.classification-column": "Classificació",
-	"resource.classification-page-link": "pàgina de Classificació",
+	"resource.classification-column": "Etiquetes",
+	"resource.classification-page-link": "Pàgina de conjunts d'etiquetes",
 	"resource.confirm-delete.description": "Si suprimiu aquest recurs, tota la informació, camps i entitats creades durant el seu processament desapareixeran. No podeu desfer aquesta acció.",
 	"resource.confirm-delete.plural-description": "Si suprimiu aquests recursos, tota la informació, camps i entitats creades durant el seu processament desapareixeran. No podeu desfer aquesta acció.",
 	"resource.confirm-delete.plural-title": "Esteu segur que voleu suprimir els recursos?",
 	"resource.confirm-delete.title": "Esteu segur que voleu suprimir el recurs?",
-	"resource.confirm-reprocess.description": "Necessitem un temps per processar les dades. Un cop reprocessat el podeu veure a la pàgina de la llista de recursos disponible per editar, classificar o anotar.",
+	"resource.confirm-reprocess.description": "El processament de les dades trigarà un temps.",
 	"resource.confirm-reprocess.plural-description": "Necessitem un temps per processar les dades. Un cop reprocessats els podeu veure a la pàgina de llista de recursos disponible per editar, classificar o anotar.",
 	"resource.confirm-reprocess.plural-title": "Esteu segur que voleu tornar a processar els recursos?",
 	"resource.confirm-reprocess.title": "Esteu segur que voleu tornar a processar el recurs?",
@@ -609,9 +608,9 @@
 	"resource.thumbnail.label": "Miniatura",
 	"resource.title": "Títol del recurs",
 	"resource.tooltip.add-field": "Afegeix un camp",
-	"resource.tooltip.annotation": "Anotació",
+	"resource.tooltip.annotation": "Anoteu amb NER",
 	"resource.tooltip.back-to-resources": "Torna a la llista de recursos",
-	"resource.tooltip.classification": "Classificació",
+	"resource.tooltip.classification": "Anotar amb etiquetes",
 	"resource.tooltip.delete": "Suprimeix",
 	"resource.tooltip.edition": "Edició",
 	"resource.tooltip.next-resource": "Següent recurs",
@@ -718,13 +717,13 @@
 	"stash.service_access": "Claus API",
 	"stash.service_access_description": "Important! Copieu i deseu la clau de l'API. Desapareixerà un cop afegit.",
 	"stash.settings.processes.classifier": "Formació sobre la intenció de cerca d'etiquetes",
-	"stash.settings.processes.classifier_info": "Per obtenir suggeriments de cerca d'etiquetes precisos, el contingut existent s'ha d'etiquetar. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
+	"stash.settings.processes.classifier_info": "Per obtenir suggeriments de cerca d'etiquetes precisos, el contingut existent s'ha d'etiquetar. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear etiquetes noves des de la pàgina de conjunts d'etiquetes.",
 	"stash.settings.processes.ner": "Formació de reconeixement d'entitats anomenades",
 	"stash.settings.processes.ner_info": "Per reconèixer les vostres entitats personalitzades automàticament, el contingut existent s'ha d'anotar amb les vostres entitats personalitzades. A mesura que s'anoti més contingut, la formació millorarà. Podeu crear noves entitats personalitzades des de la pàgina Estadístiques.",
 	"stash.settings.processes.paragraph-labeler": "Formació automàtica d'etiquetes de blocs de text",
-	"stash.settings.processes.paragraph-labeler_info": "Per etiquetar els blocs de text automàticament, els blocs de text existents s'han d'etiquetar. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear etiquetes noves des de la pàgina de classificació.",
+	"stash.settings.processes.paragraph-labeler_info": "Per etiquetar els blocs de text automàticament, els blocs de text existents s'han d'etiquetar. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear etiquetes noves des de la pàgina de conjunts d'etiquetes.",
 	"stash.settings.processes.resource-labeler": "Formació automàtica d'etiquetes de recursos",
-	"stash.settings.processes.resource-labeler_info": "Per etiquetar recursos automàticament, cal etiquetar els recursos existents. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
+	"stash.settings.processes.resource-labeler_info": "Per etiquetar recursos automàticament, cal etiquetar els recursos existents. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear etiquetes noves des de la pàgina de conjunts d'etiquetes.",
 	"stash.settings.processes.training.active": "Hi ha un entrenament actiu que pots aturar en qualsevol moment. Rebràs un correu electrònic quan estigui complet.",
 	"stash.settings.processes.training.agreement": "Accepto els càrrecs incorreguts en seleccionar aquesta opció",
 	"stash.settings.processes.training.consult-history": "Consulta totes les dades i l'estat dels entrenaments realitzats o en curs",
@@ -741,7 +740,7 @@
 	"stash.settings.processes.training.time_requirement": "El temps necessari per entrenar és d'unes {{hours}} hores que es restaran de les hores disponibles.",
 	"stash.side.activity": "Registre d'activitat",
 	"stash.side.api_keys": "Tecles API",
-	"stash.side.classification": "Classificació",
+	"stash.side.classification": "Conjunts d'etiquetes",
 	"stash.side.list": "Llistat recursos",
 	"stash.side.manage-kbs": "Gestionar Knowledge Boxes",
 	"stash.side.settings": "Preferències",
