--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -288,7 +288,6 @@
 	"feedback.subtitle": "Bevor Sie Nuclia verlassen, teilen Sie uns bitte den Grund mit, warum Sie Nuclia verlassen:",
 	"feedback.title": "Wir sind traurig, Sie gehen zu sehen!",
 	"filter.search_ontology": "Suchontologie",
-	"filter.suggested_classification": "Vorgeschlagene Klassifizierung",
 	"generic.accept": "Akzeptieren",
 	"generic.actions": "Aktionen",
 	"generic.add": "Hinzufügen",
@@ -400,7 +399,7 @@
 	"label-set.form.exclusive": "Exklusives Etikett",
 	"label-set.form.exclusive-checkbox": "Fügen Sie pro Etikettensatz nur ein Etikett hinzu",
 	"label-set.form.exclusive-description": "Standardmäßig kann eine Ressource/ein Textblock mehrere Beschriftungen aus demselben Beschriftungssatz haben.",
-	"label-set.form.kind": "Klassifizierungstyp",
+	"label-set.form.kind": "Etikettensatztyp",
 	"label-set.form.kind-warning": "Diese Eigenschaft kann nachträglich nicht mehr geändert werden.",
 	"label-set.form.labels.duplicated-name": "Doppelter Labelname",
 	"label-set.form.labels.naming-constraint": "Geschweifte Klammern sind nicht zulässig",
@@ -509,13 +508,13 @@
 	"resource.classification.no-paragraph-labelset": "Für Textblöcke ist keine Beschriftung festgelegt. Sie können einige hinzufügen",
 	"resource.classification.no-resource-labelset": "Für Ressourcen ist kein Label festgelegt. Sie können einige hinzufügen",
 	"resource.classification.remove-label": "Etikett aus Auswahl entfernen",
-	"resource.classification-column": "Einstufung",
-	"resource.classification-page-link": "Klassifizierungsseite",
+	"resource.classification-column": "Etiketten",
+	"resource.classification-page-link": "Seite „Beschriftungssätze“.",
 	"resource.confirm-delete.description": "Wenn Sie diese Ressource löschen, verschwinden alle während ihrer Verarbeitung erstellten Informationen, Felder und Entitäten. Sie können diese Aktion nicht rückgängig machen.",
 	"resource.confirm-delete.plural-description": "Wenn Sie diese Ressourcen löschen, verschwinden alle während der Verarbeitung erstellten Informationen, Felder und Entitäten. Sie können diese Aktion nicht rückgängig machen.",
 	"resource.confirm-delete.plural-title": "Sind Sie sicher, dass Sie die Ressourcen löschen möchten?",
 	"resource.confirm-delete.title": "Sind Sie sicher, dass Sie die Ressource löschen möchten?",
-	"resource.confirm-reprocess.description": "Wir benötigen etwas Zeit, um die Daten zu verarbeiten. Nach der erneuten Verarbeitung können Sie es auf der Seite mit der Ressourcenliste sehen und können es bearbeiten, klassifizieren oder mit Anmerkungen versehen.",
+	"resource.confirm-reprocess.description": "Die Verarbeitung der Daten wird einige Zeit in Anspruch nehmen.",
 	"resource.confirm-reprocess.plural-description": "Wir benötigen etwas Zeit, um die Daten zu verarbeiten. Nach der erneuten Verarbeitung können Sie sie auf der Ressourcenlistenseite sehen und können sie bearbeiten, klassifizieren oder mit Anmerkungen versehen.",
 	"resource.confirm-reprocess.plural-title": "Sind Sie sicher, dass Sie die Ressourcen erneut verarbeiten möchten?",
 	"resource.confirm-reprocess.title": "Sind Sie sicher, dass Sie die Ressource erneut verarbeiten möchten?",
@@ -610,9 +609,9 @@
 	"resource.thumbnail.label": "Miniaturansicht",
 	"resource.title": "Ressourcentitel",
 	"resource.tooltip.add-field": "Feld hinzufügen",
-	"resource.tooltip.annotation": "Anmerkung",
+	"resource.tooltip.annotation": "Kommentieren Sie mit NER",
 	"resource.tooltip.back-to-resources": "Zurück zur Ressourcenliste",
-	"resource.tooltip.classification": "Einstufung",
+	"resource.tooltip.classification": "Kommentieren Sie mit Beschriftungen",
 	"resource.tooltip.delete": "Löschen",
 	"resource.tooltip.edition": "Auflage",
 	"resource.tooltip.next-resource": "Nächste Ressource",
@@ -719,13 +718,13 @@
 	"stash.service_access": "API-Schlüssel",
 	"stash.service_access_description": "Wichtig! Kopieren und speichern Sie den API-Schlüssel. Es verschwindet, sobald es hinzugefügt wurde.",
 	"stash.settings.processes.classifier": "Schulung zur Label-Suchabsicht",
-	"stash.settings.processes.classifier_info": "Um genaue Vorschläge für die Label-Suche zu erhalten, müssen vorhandene Inhalte mit Labels versehen werden. Je mehr Inhalte gekennzeichnet werden, desto besser wird die Schulung. Sie können auf der Ontologieseite neue Beschriftungen und Klassifizierungen erstellen.",
+	"stash.settings.processes.classifier_info": "Um genaue Vorschläge für die Label-Suche zu erhalten, müssen vorhandene Inhalte mit Labels versehen werden. Je mehr Inhalte gekennzeichnet werden, desto besser wird die Schulung. Sie können auf der Seite mit den Etikettensätzen neue Etiketten erstellen.",
 	"stash.settings.processes.ner": "Schulung zur Anerkennung benannter Entitäten",
 	"stash.settings.processes.ner_info": "Um Ihre benutzerdefinierten Entitäten automatisch zu erkennen, müssen vorhandene Inhalte mit Ihren benutzerdefinierten Entitäten annotiert werden. Je mehr Inhalte kommentiert werden, desto besser wird das Training. Sie können auf der Insights-Seite neue benutzerdefinierte Entitäten erstellen.",
 	"stash.settings.processes.paragraph-labeler": "Automatisches Training der Beschriftung von Textblöcken",
-	"stash.settings.processes.paragraph-labeler_info": "Um Textblöcke automatisch zu beschriften, müssen bestehende Textblöcke beschriftet werden. Je mehr Inhalte gekennzeichnet werden, desto besser wird die Schulung. Sie können auf der Klassifizierungsseite neue Etiketten erstellen.",
+	"stash.settings.processes.paragraph-labeler_info": "Um Textblöcke automatisch zu beschriften, müssen vorhandene Textblöcke beschriftet werden. Je mehr Inhalte gekennzeichnet werden, desto besser wird die Schulung. Sie können auf der Seite mit den Etikettensätzen neue Etiketten erstellen.",
 	"stash.settings.processes.resource-labeler": "Automatisches Ressourcen-Label-Training",
-	"stash.settings.processes.resource-labeler_info": "Um Ressourcen automatisch zu kennzeichnen, müssen vorhandene Ressourcen gekennzeichnet werden. Je mehr Inhalte gekennzeichnet werden, desto besser wird die Schulung. Sie können auf der Ontologieseite neue Beschriftungen und Klassifizierungen erstellen.",
+	"stash.settings.processes.resource-labeler_info": "Um Ressourcen automatisch zu kennzeichnen, müssen vorhandene Ressourcen gekennzeichnet werden. Je mehr Inhalte gekennzeichnet werden, desto besser wird die Schulung. Sie können auf der Seite mit den Etikettensätzen neue Etiketten erstellen.",
 	"stash.settings.processes.training.active": "Es gibt ein aktives Training, das Sie jederzeit beenden können. Sie erhalten eine E-Mail, wenn der Vorgang abgeschlossen ist.",
 	"stash.settings.processes.training.agreement": "Ich akzeptiere die Kosten, die durch die Auswahl dieser Option entstehen",
 	"stash.settings.processes.training.consult-history": "Sehen Sie sich alle Daten und den Status der abgeschlossenen oder laufenden Schulungen an",
@@ -742,7 +741,7 @@
 	"stash.settings.processes.training.time_requirement": "Die für das Training erforderliche Zeit beträgt etwa {{hours}} Stunden, die von den verfügbaren Stunden abgezogen werden.",
 	"stash.side.activity": "Aktivitätsprotokoll",
 	"stash.side.api_keys": "API-Schlüssel",
-	"stash.side.classification": "Einstufung",
+	"stash.side.classification": "Etikettensätze",
 	"stash.side.list": "Ressourcenliste",
 	"stash.side.manage-kbs": "Knowledge Boxes verwalten",
 	"stash.side.settings": "Die Einstellungen",
