--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -288,7 +288,6 @@
 	"feedback.subtitle": "Before you leave, please let us know the reason you are leaving Nuclia:",
 	"feedback.title": "We’re sad to see you go!",
 	"filter.search_ontology": "Search ontology ",
-	"filter.suggested_classification": "Suggested classification",
 	"generic.accept": "Accept",
 	"generic.actions": "Actions",
 	"generic.add": "Add",
@@ -400,7 +399,7 @@
 	"label-set.form.exclusive": "Exclusive label",
 	"label-set.form.exclusive-checkbox": "Add only one label by label set",
 	"label-set.form.exclusive-description": "By default, a resource / text block can have several labels from a same label set.",
-	"label-set.form.kind": "Classification type",
+	"label-set.form.kind": "Label set type",
 	"label-set.form.kind-warning": "This property cannot be modified afterward.",
 	"label-set.form.labels.duplicated-name": "Duplicated label name",
 	"label-set.form.labels.naming-constraint": "Curly brackets not allowed",
@@ -509,13 +508,13 @@
 	"resource.classification.no-paragraph-labelset": "There is no label set for text blocks. You can add some in",
 	"resource.classification.no-resource-labelset": "There is no label set for resources. You can add some in",
 	"resource.classification.remove-label": "Remove label from selection",
-	"resource.classification-column": "Classification",
-	"resource.classification-page-link": "Classification page",
+	"resource.classification-column": "Labels",
+	"resource.classification-page-link": "Label sets page",
 	"resource.confirm-delete.description": "If you delete this resource all information, fields, and entities created during its processing will disappear. You cannot undo this action. ",
 	"resource.confirm-delete.plural-description": "If you delete those resources all information, fields, and entities created during its processing will disappear. You cannot undo this action. ",
 	"resource.confirm-delete.plural-title": "Are you sure you want to delete the resources?",
 	"resource.confirm-delete.title": "Are you sure you want to delete the resource?",
-	"resource.confirm-reprocess.description": "We need some time to process the data. Once reprocessed you can see it on the resource list page available for editing, classifying or annotating.",
+	"resource.confirm-reprocess.description": "Process the data will take some time.",
 	"resource.confirm-reprocess.plural-description": "We need some time to process the data. Once reprocessed you can see them on the resource list page available for editing, classifying or annotating.",
 	"resource.confirm-reprocess.plural-title": "Are you sure you want to reprocess the resources?",
 	"resource.confirm-reprocess.title": "Are you sure you want to reprocess the resource?",
@@ -610,9 +609,9 @@
 	"resource.thumbnail.label": "Thumbnail",
 	"resource.title": "Resource title",
 	"resource.tooltip.add-field": "Add field",
-	"resource.tooltip.annotation": "Annotation",
+	"resource.tooltip.annotation": "Annotate with NER",
 	"resource.tooltip.back-to-resources": "Back to resource list",
-	"resource.tooltip.classification": "Classification",
+	"resource.tooltip.classification": "Annotate with labels",
 	"resource.tooltip.delete": "Delete",
 	"resource.tooltip.edition": "Edition",
 	"resource.tooltip.next-resource": "Next resource",
@@ -719,13 +718,13 @@
 	"stash.service_access": "API keys",
 	"stash.service_access_description": "Important! Copy and save the API key. It will disappear once added.",
 	"stash.settings.processes.classifier": "Label search intent training",
-	"stash.settings.processes.classifier_info": "In order to get accurate label search suggestions, existing content has to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page. ",
+	"stash.settings.processes.classifier_info": "In order to get accurate label search suggestions, existing content has to be labeled. As more content is labeled, training will improve. You can create new labels from the label sets page. ",
 	"stash.settings.processes.ner": "Named Entities Recognition training",
 	"stash.settings.processes.ner_info": "In order to recognize your custom entities automatically, existing content has to be annotated with your custom entities. As more content is annotated, training will improve. You can create new custom entities from the Insights page.",
 	"stash.settings.processes.paragraph-labeler": "Automatic text blocks label training",
-	"stash.settings.processes.paragraph-labeler_info": "In order to label text blocks automatically, existing text blocks have to be labeled. As more content is labeled, training will improve. You can create new labels from the classification page.",
+	"stash.settings.processes.paragraph-labeler_info": "In order to label text blocks automatically, existing text blocks have to be labeled. As more content is labeled, training will improve. You can create new labels from the label sets page.",
 	"stash.settings.processes.resource-labeler": "Automatic resource label training",
-	"stash.settings.processes.resource-labeler_info": "In order to label resources automatically, existing resources have to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page.",
+	"stash.settings.processes.resource-labeler_info": "In order to label resources automatically, existing resources have to be labeled. As more content is labeled, training will improve. You can create new labels from the label sets page.",
 	"stash.settings.processes.training.active": "There is an active training that you can stop at any time. You will receive an email when it is complete.",
 	"stash.settings.processes.training.agreement": "I accept the charges incurred by selecting this option",
 	"stash.settings.processes.training.consult-history": "Consult all the data and the status of the trainings completed or in progress",
@@ -742,7 +741,7 @@
 	"stash.settings.processes.training.time_requirement": "The time required to train is about {{hours}} hours which will be subtracted from the available hours.",
 	"stash.side.activity": "Activity log",
 	"stash.side.api_keys": "API keys",
-	"stash.side.classification": "Classification",
+	"stash.side.classification": "Label sets",
 	"stash.side.list": "Resources list",
 	"stash.side.manage-kbs": "Manage Knowledge Boxes",
 	"stash.side.settings": "Settings",
