--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -287,7 +287,6 @@
 	"feedback.subtitle": "Antes de irte, por favor explicanos el motivo por el cual te vas de Nuclia:",
 	"feedback.title": "¡Estamos tristes de verte partir!",
 	"filter.search_ontology": "Busca la Ontología",
-	"filter.suggested_classification": "Clasificación sugerida",
 	"generic.accept": "Aceptar",
 	"generic.actions": "Acciones",
 	"generic.add": "Añadir",
@@ -399,7 +398,7 @@
 	"label-set.form.exclusive": "Etiqueta exclusiva",
 	"label-set.form.exclusive-checkbox": "Agregar solo una etiqueta por conjunto de etiquetas",
 	"label-set.form.exclusive-description": "Por defecto, un recurso / bloque de texto puede tener varias etiquetas de un mismo conjunto de etiquetas.",
-	"label-set.form.kind": "Tipo de clasificación",
+	"label-set.form.kind": "Tipo de conjunto de etiquetas",
 	"label-set.form.kind-warning": "Esta propiedad no se puede modificar posteriormente.",
 	"label-set.form.labels.duplicated-name": "Nombre de etiqueta duplicado",
 	"label-set.form.labels.naming-constraint": "No se permiten corchetes",
@@ -508,13 +507,13 @@
 	"resource.classification.no-paragraph-labelset": "No hay ninguna etiqueta establecida para los bloques de texto. Puedes agregar algunos en",
 	"resource.classification.no-resource-labelset": "No hay ninguna etiqueta establecida para los recursos. Puedes agregar algunos en",
 	"resource.classification.remove-label": "Eliminar etiqueta de la selección",
-	"resource.classification-column": "Clasificación",
-	"resource.classification-page-link": "página de Clasificación",
+	"resource.classification-column": "Etiquetas",
+	"resource.classification-page-link": "Página de conjuntos de etiquetas",
 	"resource.confirm-delete.description": "Si elimina este recurso, toda la información, los campos y las entidades creadas durante su procesamiento desaparecerán. No puede deshacer esta acción.",
 	"resource.confirm-delete.plural-description": "Si elimina esos recursos, toda la información, los campos y las entidades creadas durante su procesamiento desaparecerán. No puede deshacer esta acción.",
 	"resource.confirm-delete.plural-title": "¿Está seguro de que desea eliminar los recursos?",
 	"resource.confirm-delete.title": "¿Está seguro de que desea eliminar el recurso?",
-	"resource.confirm-reprocess.description": "Necesitamos algo de tiempo para procesar los datos. Una vez reprocesado, puede verlo en la página de la lista de recursos disponible para editar, clasificar o anotar.",
+	"resource.confirm-reprocess.description": "Procesar los datos llevará algún tiempo.",
 	"resource.confirm-reprocess.plural-description": "Necesitamos algún tiempo para procesar los datos. Una vez reprocesados, podrá verlos en la página de la lista de recursos disponibles para editarlos, clasificarlos o anotarlos.",
 	"resource.confirm-reprocess.plural-title": "¿Está seguro de que desea reprocesar los recursos?",
 	"resource.confirm-reprocess.title": "¿Está seguro de que desea volver a procesar el recurso?",
@@ -609,9 +608,9 @@
 	"resource.thumbnail.label": "Miniatura",
 	"resource.title": "Título del recurso",
 	"resource.tooltip.add-field": "Agregar un campo",
-	"resource.tooltip.annotation": "Anotación",
+	"resource.tooltip.annotation": "Anotar con NER",
 	"resource.tooltip.back-to-resources": "Volver a la lista de recursos",
-	"resource.tooltip.classification": "Clasificación",
+	"resource.tooltip.classification": "Anotar con etiquetas",
 	"resource.tooltip.delete": "Borrar",
 	"resource.tooltip.edition": "Edición",
 	"resource.tooltip.next-resource": "Siguiente recurso",
@@ -718,13 +717,13 @@
 	"stash.service_access": "Claves de api",
 	"stash.service_access_description": "¡Importante! Copie y guarde la clave API. Desaparecerá una vez añadido.",
 	"stash.settings.processes.classifier": "Capacitación de intención de búsqueda de etiquetas",
-	"stash.settings.processes.classifier_info": "Para obtener sugerencias precisas de búsqueda de etiquetas, se debe etiquetar el contenido existente. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
+	"stash.settings.processes.classifier_info": "Para obtener sugerencias de búsqueda de etiquetas precisas, se debe etiquetar el contenido existente. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas desde la página de conjuntos de etiquetas.",
 	"stash.settings.processes.ner": "Capacitación en reconocimiento de entidades nombradas",
 	"stash.settings.processes.ner_info": "Para reconocer sus entidades personalizadas automáticamente, el contenido existente debe anotarse con sus entidades personalizadas. A medida que se anota más contenido, la capacitación mejorará. Puede crear nuevas entidades personalizadas desde la página Insights.",
 	"stash.settings.processes.paragraph-labeler": "Entrenamiento automático de etiquetas de bloques de texto",
-	"stash.settings.processes.paragraph-labeler_info": "Para etiquetar bloques de texto automáticamente, es necesario etiquetar los bloques de texto existentes. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas desde la página de clasificación.",
+	"stash.settings.processes.paragraph-labeler_info": "Para etiquetar bloques de texto automáticamente, es necesario etiquetar los bloques de texto existentes. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas desde la página de conjuntos de etiquetas.",
 	"stash.settings.processes.resource-labeler": "Entrenamiento automático de etiquetas de recursos",
-	"stash.settings.processes.resource-labeler_info": "Para etiquetar recursos automáticamente, los recursos existentes deben etiquetarse. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
+	"stash.settings.processes.resource-labeler_info": "Para etiquetar los recursos automáticamente, se deben etiquetar los recursos existentes. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas desde la página de conjuntos de etiquetas.",
 	"stash.settings.processes.training.active": "Hay un entrenamiento activo que puedes detener en cualquier momento. Recibirás un correo electrónico cuando esté completo.",
 	"stash.settings.processes.training.agreement": "Acepto los cargos incurridos al seleccionar esta opción",
 	"stash.settings.processes.training.consult-history": "Consulta todos los datos y el estado de los entrenamientos realizados o en curso",
@@ -741,7 +740,7 @@
 	"stash.settings.processes.training.time_requirement": "El tiempo necesario para entrenar es de unas {{hours}} horas que se restarán de las horas disponibles.",
 	"stash.side.activity": "Registro de actividad",
 	"stash.side.api_keys": "Claves de api",
-	"stash.side.classification": "Clasificación",
+	"stash.side.classification": "Conjuntos de etiquetas",
 	"stash.side.list": "Listado de recursos",
 	"stash.side.manage-kbs": "Administrar Knowledge Boxes",
 	"stash.side.settings": "Preferencias",
