--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -288,7 +288,6 @@
 	"feedback.subtitle": "Avant de partir, merci de nous indiquer la raison pour laquelle vous quittez Nuclia :",
 	"feedback.title": "Nous sommes tristes de vous voir partir !",
 	"filter.search_ontology": "Ontologie de recherche",
-	"filter.suggested_classification": "Classement suggéré",
 	"generic.accept": "Accepter",
 	"generic.actions": "Actions",
 	"generic.add": "Ajouter",
@@ -400,7 +399,7 @@
 	"label-set.form.exclusive": "Étiquette exclusive",
 	"label-set.form.exclusive-checkbox": "Ajouter une seule étiquette par jeu d'étiquettes",
 	"label-set.form.exclusive-description": "Par défaut, une ressource / un bloc de texte peut avoir plusieurs étiquettes issues d'un même jeu d'étiquettes.",
-	"label-set.form.kind": "Type de classement",
+	"label-set.form.kind": "Type de famille d'étiquettes",
 	"label-set.form.kind-warning": "Cette propriété ne pourra plus être modifiée par la suite.",
 	"label-set.form.labels.duplicated-name": "Nom d'étiquette en double",
 	"label-set.form.labels.naming-constraint": "Les accolades ne sont pas autorisées",
@@ -509,13 +508,13 @@
 	"resource.classification.no-paragraph-labelset": "Aucune étiquette n’est définie pour les blocs de texte. Vous pouvez en ajouter",
 	"resource.classification.no-resource-labelset": "Aucune étiquette n’est définie pour les ressources. Vous pouvez en ajouter",
 	"resource.classification.remove-label": "Supprimer l'étiquette de la sélection",
-	"resource.classification-column": "Classification",
-	"resource.classification-page-link": "Page de classement",
+	"resource.classification-column": "Étiquettes",
+	"resource.classification-page-link": "Page familles d'étiquettes",
 	"resource.confirm-delete.description": "Si vous supprimez cette ressource, toutes les informations, champs et entités créés lors de son traitement disparaîtront. Vous ne pouvez pas annuler cette action.",
 	"resource.confirm-delete.plural-description": "Si vous supprimez ces ressources, toutes les informations, champs et entités créés lors de leur traitement disparaîtront. Vous ne pouvez pas annuler cette action.",
 	"resource.confirm-delete.plural-title": "Êtes-vous sûr de vouloir supprimer les ressources ?",
 	"resource.confirm-delete.title": "Êtes-vous sûr de vouloir supprimer la ressource ?",
-	"resource.confirm-reprocess.description": "Nous avons besoin de temps pour traiter les données. Une fois retraité, vous pouvez le voir sur la page de liste des ressources disponible pour l'édition, la classification ou l'annotation.",
+	"resource.confirm-reprocess.description": "Traiter les données prendra un certain temps.",
 	"resource.confirm-reprocess.plural-description": "Nous avons besoin d'un certain temps pour traiter les données. Une fois retraitées, vous pourrez les voir sur la page de la liste des ressources et les éditer, les classer ou les annoter.",
 	"resource.confirm-reprocess.plural-title": "Êtes-vous sûr de vouloir retraiter les ressources ?",
 	"resource.confirm-reprocess.title": "Êtes-vous sûr de vouloir retraiter la ressource ?",
@@ -610,9 +609,9 @@
 	"resource.thumbnail.label": "Vignette",
 	"resource.title": "Titre de la ressource",
 	"resource.tooltip.add-field": "Ajouter un champ",
-	"resource.tooltip.annotation": "Annotation",
+	"resource.tooltip.annotation": "Annoter avec NER",
 	"resource.tooltip.back-to-resources": "Retour à la liste des ressources",
-	"resource.tooltip.classification": "Classification",
+	"resource.tooltip.classification": "Annoter avec des étiquettes",
 	"resource.tooltip.delete": "Effacer",
 	"resource.tooltip.edition": "Édition",
 	"resource.tooltip.next-resource": "Ressource suivante",
@@ -719,13 +718,13 @@
 	"stash.service_access": "Clés API",
 	"stash.service_access_description": "Important! Copiez et enregistrez la clé API. Il disparaîtra une fois ajouté.",
 	"stash.settings.processes.classifier": "Formation sur l'intention de recherche d'étiquettes",
-	"stash.settings.processes.classifier_info": "Afin d'obtenir des suggestions de recherche d'étiquettes précises, le contenu existant doit être étiqueté. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes et classifications à partir de la page ontologie.",
+	"stash.settings.processes.classifier_info": "Afin d'obtenir des suggestions de recherche d'étiquettes précises, le contenu existant doit être étiqueté. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes à partir de la page des familles d'étiquettes.",
 	"stash.settings.processes.ner": "Formation sur la reconnaissance des entités nommées",
 	"stash.settings.processes.ner_info": "Afin de reconnaître automatiquement vos entités personnalisées, le contenu existant doit être annoté avec vos entités personnalisées. Au fur et à mesure que davantage de contenu sera annoté, la formation s’améliorera. Vous pouvez créer de nouvelles entités personnalisées à partir de la page Insights.",
 	"stash.settings.processes.paragraph-labeler": "Formation automatique aux étiquettes des blocs de texte",
-	"stash.settings.processes.paragraph-labeler_info": "Afin d'étiqueter automatiquement les blocs de texte, les blocs de texte existants doivent être étiquetés. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes à partir de la page de classification.",
+	"stash.settings.processes.paragraph-labeler_info": "Afin d'étiqueter automatiquement les blocs de texte, les blocs de texte existants doivent être étiquetés. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes à partir de la page des familles d'étiquettes.",
 	"stash.settings.processes.resource-labeler": "Formation automatique aux étiquettes de ressources",
-	"stash.settings.processes.resource-labeler_info": "Afin d'étiqueter automatiquement les ressources, les ressources existantes doivent être étiquetées. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes et classifications à partir de la page ontologie.",
+	"stash.settings.processes.resource-labeler_info": "Afin d'étiqueter automatiquement les ressources, les ressources existantes doivent être étiquetées. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes à partir de la page des familles d'étiquettes.",
 	"stash.settings.processes.training.active": "Il existe un entraînement actif que vous pouvez arrêter à tout moment. Vous recevrez un e-mail une fois celui-ci terminé.",
 	"stash.settings.processes.training.agreement": "J'accepte les frais occasionnés en sélectionnant cette option",
 	"stash.settings.processes.training.consult-history": "Consultez toutes les données et l'état des entraînements complétées ou en cours",
@@ -742,7 +741,7 @@
 	"stash.settings.processes.training.time_requirement": "Le temps nécessaire pour s'entraîner est d'environ {{hours}}  heures qui seront soustraites des heures disponibles.",
 	"stash.side.activity": "Journal d'activité",
 	"stash.side.api_keys": "Clés API",
-	"stash.side.classification": "Classification",
+	"stash.side.classification": "Familles d'étiquettes",
 	"stash.side.list": "Liste des ressources",
 	"stash.side.manage-kbs": "Gérer les Knowledge Boxes",
 	"stash.side.settings": "Réglages",
