--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -288,7 +288,6 @@
 	"feedback.subtitle": "Antes de partir, informe-nos o motivo pelo qual você está saindo da Nuclia:",
 	"feedback.title": "Estamos tristes em ver você partir!",
 	"filter.search_ontology": "Ontologia de pesquisa",
-	"filter.suggested_classification": "Classificação sugerida",
 	"generic.accept": "Aceitar",
 	"generic.actions": "Ações",
 	"generic.add": "Adicionar",
@@ -400,7 +399,7 @@
 	"label-set.form.exclusive": "Etiqueta exclusiva",
 	"label-set.form.exclusive-checkbox": "Adicione apenas um rótulo por conjunto de rótulos",
 	"label-set.form.exclusive-description": "Por padrão, um recurso / bloco de texto pode ter vários rótulos de um mesmo conjunto de rótulos.",
-	"label-set.form.kind": "Tipo de Classificação",
+	"label-set.form.kind": "Tipo de conjunto de etiquetas",
 	"label-set.form.kind-warning": "Esta propriedade não pode ser modificada posteriormente.",
 	"label-set.form.labels.duplicated-name": "Nome do rótulo duplicado",
 	"label-set.form.labels.naming-constraint": "Colchetes não permitidos",
@@ -509,13 +508,13 @@
 	"resource.classification.no-paragraph-labelset": "Não há rótulo definido para blocos de texto. Você pode adicionar alguns",
 	"resource.classification.no-resource-labelset": "Não há rótulo definido para recursos. Você pode adicionar alguns",
 	"resource.classification.remove-label": "Remover rótulo da seleção",
-	"resource.classification-column": "Classificação",
-	"resource.classification-page-link": "Página de classificação",
+	"resource.classification-column": "Etiquetas",
+	"resource.classification-page-link": "Página de conjuntos de etiquetas",
 	"resource.confirm-delete.description": "Se você excluir este recurso, todas as informações, campos e entidades criadas durante o seu processamento desaparecerão. Você não pode desfazer esta ação.",
 	"resource.confirm-delete.plural-description": "Se você excluir esses recursos, todas as informações, campos e entidades criadas durante o seu processamento desaparecerão. Você não pode desfazer esta ação.",
 	"resource.confirm-delete.plural-title": "Tem certeza de que deseja excluir os recursos?",
 	"resource.confirm-delete.title": "Tem certeza de que deseja excluir o recurso?",
-	"resource.confirm-reprocess.description": "Precisamos de algum tempo para processar os dados. Depois de reprocessado, você poderá vê-lo na página da lista de recursos disponível para edição, classificação ou anotação.",
+	"resource.confirm-reprocess.description": "Processar os dados levará algum tempo.",
 	"resource.confirm-reprocess.plural-description": "Precisamos de algum tempo para processar os dados. Depois de reprocessados, você poderá vê-los na página da lista de recursos disponíveis para edição, classificação ou anotação.",
 	"resource.confirm-reprocess.plural-title": "Tem certeza de que deseja reprocessar os recursos?",
 	"resource.confirm-reprocess.title": "Tem certeza de que deseja reprocessar o recurso?",
@@ -610,9 +609,9 @@
 	"resource.thumbnail.label": "Miniatura",
 	"resource.title": "Título do recurso",
 	"resource.tooltip.add-field": "Adicionar um campo",
-	"resource.tooltip.annotation": "Anotação",
+	"resource.tooltip.annotation": "Anotar com NER",
 	"resource.tooltip.back-to-resources": "Voltar à lista de recursos",
-	"resource.tooltip.classification": "Classificação",
+	"resource.tooltip.classification": "Anotar com rótulos",
 	"resource.tooltip.delete": "Excluir",
 	"resource.tooltip.edition": "Edição",
 	"resource.tooltip.next-resource": "Próximo recurso",
@@ -719,13 +718,13 @@
 	"stash.service_access": "Chaves de Api",
 	"stash.service_access_description": "Importante! Copie e salve a chave API. Ele desaparecerá depois de adicionado.",
 	"stash.settings.processes.classifier": "Treinamento de intenção de pesquisa de rótulo",
-	"stash.settings.processes.classifier_info": "Para obter sugestões precisas de pesquisa de rótulos, o conteúdo existente deve ser rotulado. À medida que mais conteúdo for rotulado, o treinamento melhorará. Você pode criar novos rótulos e classificações na página da ontologia.",
+	"stash.settings.processes.classifier_info": "Para obter sugestões precisas de pesquisa de rótulos, o conteúdo existente deve ser rotulado. À medida que mais conteúdo for rotulado, o treinamento melhorará. Você pode criar novos rótulos na página de conjuntos de etiquetas.",
 	"stash.settings.processes.ner": "Treinamento de reconhecimento de entidades nomeadas",
 	"stash.settings.processes.ner_info": "Para reconhecer automaticamente suas entidades personalizadas, o conteúdo existente deve ser anotado com suas entidades personalizadas. À medida que mais conteúdo for anotado, o treinamento melhorará. Você pode criar novas entidades personalizadas na página Insights.",
 	"stash.settings.processes.paragraph-labeler": "Treinamento automático de rótulos de blocos de texto",
-	"stash.settings.processes.paragraph-labeler_info": "Para rotular blocos de texto automaticamente, os blocos de texto existentes devem ser rotulados. À medida que mais conteúdo for rotulado, o treinamento melhorará. Você pode criar novos rótulos na página de classificação.",
+	"stash.settings.processes.paragraph-labeler_info": "Para rotular blocos de texto automaticamente, os blocos de texto existentes devem ser rotulados. À medida que mais conteúdo for rotulado, o treinamento melhorará. Você pode criar novos rótulos na página de conjuntos de etiquetas.",
 	"stash.settings.processes.resource-labeler": "Treinamento automático de rótulos de recursos",
-	"stash.settings.processes.resource-labeler_info": "Para rotular os recursos automaticamente, os recursos existentes devem ser rotulados. À medida que mais conteúdo for rotulado, o treinamento melhorará. Você pode criar novos rótulos e classificações na página da ontologia.",
+	"stash.settings.processes.resource-labeler_info": "Para rotular os recursos automaticamente, os recursos existentes devem ser rotulados. À medida que mais conteúdo for rotulado, o treinamento melhorará. Você pode criar novos rótulos na página de conjuntos de rótulos.",
 	"stash.settings.processes.training.active": "Existe um treinamento ativo que você pode interromper a qualquer momento. Você receberá um e-mail quando estiver concluído.",
 	"stash.settings.processes.training.agreement": "Aceito as cobranças incorridas ao selecionar esta opção",
 	"stash.settings.processes.training.consult-history": "Consulte todos os dados e o status dos treinamentos concluídos ou em andamento",
@@ -742,7 +741,7 @@
 	"stash.settings.processes.training.time_requirement": "O tempo necessário para treinar é de cerca de {{hours}} horas que serão subtraídas das horas disponíveis.",
 	"stash.side.activity": "Registro de atividade",
 	"stash.side.api_keys": "Chaves de Api",
-	"stash.side.classification": "Classificação",
+	"stash.side.classification": "Conjuntos de etiquetas",
 	"stash.side.list": "Lista de recursos",
 	"stash.side.manage-kbs": "Gerenciar Knowledge Boxes",
 	"stash.side.settings": "Definições",
